updated the models and added authentication with simple jwt

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ gunicorn = "*"
 djangorestframework = "*"
 pillow = "*"
 django-environ = "*"
+djangorestframework-simplejwt = "*"
+django-multiselectfield = "*"
 
 [dev-packages]
 
