--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ pillow = "*"
 django-environ = "*"
 djangorestframework-simplejwt = "*"
 django-multiselectfield = "*"
+django-storages = "*"
+boto3 = "*"
 
 [dev-packages]
 
