--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ djangorestframework-simplejwt = "*"
 django-multiselectfield = "*"
 django-storages = "*"
 boto3 = "*"
+whitenoise = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
